syntax = "proto3";

option csharp_namespace = "MPS.MessageProcessingProto.Dispatcher.Grpc";

service MessageProcessor {
    // BiDirectional Streaming
    //Connect جریان دوطرفه است: Processor خودش را معرفی می‌کند و پیام دریافت می‌کند
    rpc Connect(stream ProcessorInfo) returns (stream ProtoMessageToProcess);

    //SendProcessedMessage برای ارسال نتیجه پردازش به Dispatcher است
    rpc SendProcessedMessage(ProtoProcessedMessage) returns (Ack);
}

// پیام معرفی Processor
message ProcessorInfo {
    string Id = 1;
    string EngineType = 2;
}

// پیام برای پردازشگر
message ProtoMessageToProcess {
    int32 Id = 1;
    string Sender = 2;
    string Content = 3;
    map<string,string> RegexSettings = 4;
}

// پیام پردازش شده
message ProtoProcessedMessage {
    int32 id = 1;
    string engine = 2;
    int32 messageLength = 3;
    bool isValid = 4;
}


// پیام تایید
message Ack {
    bool Success = 1;
}
